start syncing ui
Co-authored-by: Michael Elliot <michael@digital.com.au>

--- a/src/global.css
+++ b/src/global.css
@@ -5,3 +5,7 @@
   box-sizing: border-box;
   flex-shrink: 0;
 }
+body {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, Helvetica Neue,
+    Roboto, Segoe UI, sans-serif;
+}
