more layouts, stye helpers, ui-components and folder structure

--- a/src/global.css
+++ b/src/global.css
@@ -8,6 +8,7 @@
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, Helvetica Neue,
     Roboto, Segoe UI, sans-serif;
+  color: #0E1029;
 }
 a {
   color: inherit;
