--- a/src/global.css
+++ b/src/global.css
@@ -30,3 +30,10 @@ a {
   font-weight: 500;
   font-style: normal;
 }
+
+@font-face {
+  font-family: "SF Mono";
+  font-weight: 400;
+  src: url("/fonts/SFMono-Regular.otf");
+  font-style: normal;
+}
