--- a/src/global.css
+++ b/src/global.css
@@ -8,7 +8,7 @@
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, Helvetica Neue,
     Roboto, Segoe UI, sans-serif;
-  color: #0E1029;
+  color: #0e1029;
 }
 a {
   color: inherit;
@@ -18,7 +18,7 @@ a {
 @font-face {
   font-family: 'FT Switch';
   src: url('/fonts/FTSwitch-Regular.woff2') format('woff2'),
-  url('/fonts/FTSwitch-Regular.woff') format('woff');
+    url('/fonts/FTSwitch-Regular.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
@@ -26,14 +26,18 @@ a {
 @font-face {
   font-family: 'FT Switch';
   src: url('/fonts/FTSwitch-Medium.woff2') format('woff2'),
-  url('/fonts/FTSwitch-Medium.woff') format('woff');
+    url('/fonts/FTSwitch-Medium.woff') format('woff');
   font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "SF Mono";
+  font-family: 'SF Mono';
   font-weight: 400;
-  src: url("/fonts/SFMono-Regular.otf");
+  src: url('/fonts/SFMono-Regular.otf');
   font-style: normal;
+}
+
+input[type='number'] {
+  font-family: 'SF Mono';
 }
