Replace FTSwitch font for FTBase.

--- a/src/global.css
+++ b/src/global.css
@@ -17,18 +17,18 @@ a {
 }
 
 @font-face {
-  font-family: 'FT Switch';
-  src: url('/fonts/FTSwitch-Regular.woff2') format('woff2'),
-  url('/fonts/FTSwitch-Regular.woff') format('woff');
-  font-weight: normal;
+  font-family: 'FT Base';
+  src: url('/fonts/FTBase-Bold.woff2') format('woff2'),
+  url('/fonts/FTBase-Bold.woff') format('woff');
+  font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
-  font-family: 'FT Switch';
-  src: url('/fonts/FTSwitch-Medium.woff2') format('woff2'),
-  url('/fonts/FTSwitch-Medium.woff') format('woff');
-  font-weight: 500;
+  font-family: 'FT Base';
+  src: url('/fonts/FTBase-Regular.woff2') format('woff2'),
+  url('/fonts/FTBase-Regular.woff') format('woff');
+  font-weight: normal;
   font-style: normal;
 }
 
